--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Raj's Personal Website - Portfolio and Blog">
     <meta name="author" content="Raj">
-    <title>Raj's Portfolio</title>
+    <title>T. CHENGAPPA</title>
 
     <!-- Security Headers (Content Security Policy) -->
     <meta http-equiv="Content-Security-Policy" 
@@ -123,8 +123,8 @@
 <body>
     <!-- Header -->
     <header>
-        <h1>Raj</h1>
-        <p>Scientist | Developer | Innovator</p>
+        <h1>T. CHENGAPPA</h1>
+        <p>Enterprenuer | Nutritionist | Wellness Health Coach</p>
         <nav>
             <a href="#about">About Me</a>
             <a href="#portfolio">Portfolio</a>
