--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <body>
     <!-- Header -->
     <header>
-        <h1>T. CHENGAPPA</h1>
+        <center><h1>T. CHENGAPPA</h1></center>
         <p>Enterprenuer | Nutritionist | Wellness Health Coach</p>
         <nav>
             <a href="#about">About Me</a>
