--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
     <!-- Header -->
     <header>
         <center><h1>T. CHENGAPPA</h1></center>
-        <p>Enterprenuer | Nutritionist | Wellness Health Coach</p>
+        <center><p>Enterprenuer | Nutritionist | Wellness Health Coach</p></center>
+        
         <nav>
             <a href="#about">About Me</a>
             <a href="#portfolio">Portfolio</a>
