--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <!-- Header -->
     <header>
         <center><h1>T. CHENGAPPA</h1></center>
-        <center><p>Enterprenuer | Nutritionist | Wellness Health Coach</p></center>
+        <center><p>Enterprenuer | Nutritionist | Wellness Coach</p></center>
         
        
     </header>
